fix default div wrapping at >750px

--- a/front/client/src/components/articleList/ArticleList.css
+++ b/front/client/src/components/articleList/ArticleList.css
@@ -14,4 +14,10 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .default-div {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
