--- a/front/client/src/components/cards/Cards.css
+++ b/front/client/src/components/cards/Cards.css
@@ -274,7 +274,7 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  /* width: 320px; */
+  /* width: 47.91%; */
   max-height: 750px;
   border-style: solid;
   border: 0px;
@@ -302,7 +302,7 @@
 
 @media (min-width: 750px) {
   .default-container {
-    width: 345px;
+    width: 47.91%;
     padding: 0;
   }
 }
